<resources>
    <string name="app_name">Rutgers Schedule of Classes</string>

    <!--Invalid result strings-->
    <string name="empty_fields">Please enter all fields</string>
    <string name="no_courses">No courses found</string>

    <!--PromptCard strings-->
    <string name="year">Year</string>
    <string name="term">Term</string>
    <string name="campus">Campus</string>
    <string name="level">Level</string>
    <string name="subject">Subject</string>
    <string name="search">Search</string>
    <string name="prompt_expand">Show options for %1$s</string>
    <string name="prompt_hide">Hide options for %1$s</string>

    <!--CourseCard strings-->
    <string name="section_number">Section #: %1$s</string>
    <string name="available_sections">sections: %1$d/%2$d</string>
    <string name="course_expand">"Show sections for %1$s"</string>
    <string name="course_hide">"Hide sections for %1$s"</string>

    <!--SectionBox strings-->
    <string name="section_index">Index: %1$s</string>
    <string name="section_instructors">Instructors: %1$s</string>
    <string name="section_meeting_times">Meeting Times:</string>
    <string name="section_no_meeting_times">N/A</string>

    <!--courseScreen strings-->
    <string name="connection_error">unable to connect</string>
    <string name="default_text">Select a year, term, campus, level, and subject and press Search to see results</string>

</resources>