package my.soc.rutgersscheduleofclasses.data



//An object to store all maps from codes to full strings
object Repository {

    //maps codes to course levels
    val levels = mapOf<String,String>(
        "U" to "Undergraduate",
        "G" to "Graduate"
    )

    //maps term numbers to term names
    val terms = mapOf<String,String>(
        "1" to "Spring",
        "7" to "Summer",
        "9" to "Fall",
        "0" to "Winter"
    )

    //maps codes to days of the week
    val daysOfTheWeek = mapOf<String,String>(
        "U" to "Sunday",
        "M" to "Monday",
        "T" to "Tuesday",
        "W" to "Wednesday",
        "H" to "Thursday",
        "R" to "Thursday",
        "F" to "Friday",
        "S" to "Saturday"
    )

    //maps abbreviations to full campus names
    val campuses = mapOf<String,String>(
        "NB" to "New Brunswick",
        "NK" to "Newark",
        "CM" to "Camden",
        "ONLINE_NB" to "New Brunswick - Online and Remote Instruction Courses",
        "ONLINE_NK" to "Newark - Online and Remote Instruction Courses",
        "ONLINE_CM" to "Camden - Online and Remote Instruction Courses",
        "B" to "Burlington County Community College - Mt Laurel",
        "CC" to "Camden County College - Blackwood Campus",
        "H" to "County College of Morris",
        "CU" to "Cumberland County College",
        "MC" to "Denville - RU-Morris",
        "WM" to "Freehold WMHEC - RU-BCC",
        "L" to "Lincroft - RU-BCC",
        "AC" to "Mays Landing - RU-ACCC",
        "J" to "McGuire-Dix-Lakehurst RU-JBMDL",
        "D" to "Mercer County Community College",
        "RV" to "North Branch - RU-RVCC"
    )

    //maps subject codes to subject names
    val subjects = mapOf<String,String>(
        "003" to "003 - Academic Foundations",
        "907" to "907 - Academic and Student Development",
        "010" to "010 - Accounting",
        "011" to "011 - Administrative Studies",
        "016" to "016 - African Studies",
        "013" to "013 - African, Middle Eastern, and South Asian Languages and Literatures",
        "014" to "014 - Africana Studies",
        "035" to "035 - Agricultural and Natural Resource Management",
        "020" to "020 - Agriculture and Food Systems",
        "047" to "047 - Alcohol Studies",
        "050" to "050 - American Studies",
        "067" to "067 - Animal Science",
        "070" to "070 - Anthropology",
        "642" to "642 - Applied Mathematics",
        "755" to "755 - Applied Physics",
        "074" to "074 - Arabic Languages",
        "078" to "078 - Armenian",
        "080" to "080 - Art",
        "081" to "081 - Art",
        "082" to "082 - Art History",
        "090" to "090 - Arts and Sciences",
        "083" to "083 - Arts, Culture, and Media",
        "098" to "098 - Asian Studies",
        "100" to "100 - Astronomy",
        "107" to "107 - Atmospheric Science",
        "112" to "112 - Behavioral and Neural Sciences",
        "115" to "115 - Biochemistry",
        "116" to "116 - Bioenvironmental Engineering",
        "117" to "117 - Bioenvironmental Engineering",
        "119" to "119 - Biological Sciences",
        "120" to "120 - Biology",
        "121" to "121 - Biology: Computational and Integrative",
        "122" to "122 - Biomathematics",
        "125" to "125 - Biomedical Engineering",
        "126" to "126 - Biotechnology",
        "135" to "135 - Business Administration",
        "136" to "136 - Business Analytics and Information Technology",
        "140" to "140 - Business Law",
        "137" to "137 - Business and Science",
        "134" to "134 - Business of Fashion",
        "146" to "146 - Cell Biology and Neuroscience",
        "148" to "148 - Cell and Developmental Biology",
        "158" to "158 - Chemical Biology",
        "155" to "155 - Chemical and Biochemical Engineering",
        "160" to "160 - Chemistry",
        "163" to "163 - Childhood Studies",
        "165" to "165 - Chinese",
        "175" to "175 - Cinema Studies",
        "180" to "180 - Civil and Environmental Engineering",
        "190" to "190 - Classics",
        "821" to "821 - Clinical Psychology",
        "185" to "185 - Cognitive Science",
        "186" to "186 - College Teaching",
        "187" to "187 - College and University Leadership",
        "192" to "192 - Communication",
        "194" to "194 - Communication and Information Studies",
        "189" to "189 - Communication and Media Studies",
        "193" to "193 - Community Health Outreach",
        "195" to "195 - Comparative Literature",
        "198" to "198 - Computer Science",
        "200" to "200 - Creative Writing",
        "202" to "202 - Criminal Justice",
        "203" to "203 - Dance",
        "206" to "206 - Dance",
        "207" to "207 - Dance Education",
        "219" to "219 - Data Science",
        "208" to "208 - Design",
        "209" to "209 - Digital Studies",
        "217" to "217 - East Asian Languages and Cultures",
        "215" to "215 - Ecology",
        "216" to "216 - Ecology, Evolution and Natural Resources",
        "220" to "220 - Economics",
        "223" to "223 - Economics, Applied",
        "300" to "300 - Education",
        "233" to "233 - Education-Adult and Continuing Ed",
        "245" to "245 - Education-College Student Affairs",
        "297" to "297 - Education-Counseling Psychology",
        "262" to "262 - Education-Design of Learning Contexts",
        "251" to "251 - Education-Early Child/Elementary Ed",
        "291" to "291 - Education-Educ Stats and Measurementnt",
        "255" to "255 - Education-Education Electives",
        "230" to "230 - Education-Educational Admin, Superv, and Adult Ed",
        "290" to "290 - Education-Educational Psychology",
        "252" to "252 - Education-English/Language Arts Ed",
        "250" to "250 - Education-General Elective",
        "294" to "294 - Education-Gifted Education",
        "507" to "507 - Education-Higher Education",
        "253" to "253 - Education-Language Ed",
        "295" to "295 - Education-Learning, Cognition, and Dev",
        "254" to "254 - Education-Mathematics Ed",
        "299" to "299 - Education-Reading",
        "256" to "256 - Education-Science Ed",
        "257" to "257 - Education-Social Ed",
        "310" to "310 - Education-Social and Philosoph Found of Ed",
        "293" to "293 - Education-Special Education",
        "364" to "364 - Educational Opportunity Fund",
        "332" to "332 - Electrical and Computer Engineering",
        "340" to "340 - Endocrinology and Animal Biosciences",
        "350" to "350 - English",
        "352" to "352 - English - American Literature",
        "355" to "355 - English - Composition and Writing",
        "351" to "351 - English - Creative Writing",
        "354" to "354 - English - Film Studies",
        "358" to "358 - English - Literature",
        "359" to "359 - English - Theories and Methods",
        "356" to "356 - English as a Second Language",
        "370" to "370 - Entomology",
        "382" to "382 - Entrepreneurship",
        "378" to "378 - Environmental Change, Human Dimension",
        "380" to "380 - Environmental Geology",
        "573" to "573 - Environmental Planning and Design",
        "374" to "374 - Environmental Policy, Institutions and Behavior",
        "375" to "375 - Environmental Sciences",
        "381" to "381 - Environmental Studies",
        "015" to "015 - Environmental and Biological Sciences",
        "373" to "373 - Environmental and Business Economics",
        "522" to "522 - Ethics in Business Environment",
        "360" to "360 - European Studies",
        "001" to "001 - Exchange",
        "376" to "376 - Exchange Registration",
        "385" to "385 - Executive MBA Program",
        "377" to "377 - Exercise Science",
        "211" to "211 - Filmmaking",
        "390" to "390 - Finance",
        "430" to "430 - Financial Analysis",
        "400" to "400 - Food Science",
        "395" to "395 - Food and Business Economics",
        "412" to "412 - Forensic Science",
        "420" to "420 - French",
        "443" to "443 - Gender Studies",
        "440" to "440 - General Engineering",
        "447" to "447 - Genetics",
        "450" to "450 - Geography",
        "460" to "460 - Geological Sciences",
        "470" to "470 - German",
        "478" to "478 - Global Affairs",
        "475" to "475 - Global Sport Business",
        "480" to "480 - Global Studies",
        "485" to "485 - Graduate - Newark",
        "085" to "085 - Graphic Design",
        "490" to "490 - Greek",
        "489" to "489 - Greek, Modern",
        "501" to "501 - Health Administration",
        "499" to "499 - Health Sciences",
        "505" to "505 - Hindi",
        "509" to "509 - Historical Methods and Skills",
        "510" to "510 - History",
        "508" to "508 - History - Africa, Asia, Latin America",
        "512" to "512 - History - American",
        "506" to "506 - History - General/Comparative",
        "516" to "516 - History - World: African, Asian, Latin American",
        "526" to "526 - Honors Living-Learning Community",
        "525" to "525 - Honors Program",
        "533" to "533 - Human Resource Management",
        "535" to "535 - Hungarian",
        "545" to "545 - Industrial Relations and Human Resources",
        "540" to "540 - Industrial and Systems Engineering",
        "544" to "544 - Information Technology",
        "547" to "547 - Information Technology and Informatics",
        "557" to "557 - Interdisciplinary - Mason Gross",
        "554" to "554 - Interdisciplinary Studies",
        "556" to "556 - Interdisciplinary Studies - Arts and Sciences",
        "621" to "621 - Interfunctional",
        "553" to "553 - International Business",
        "558" to "558 - International Studies",
        "560" to "560 - Italian",
        "565" to "565 - Japanese",
        "563" to "563 - Jewish Studies",
        "570" to "570 - Journalism",
        "086" to "086 - Journalism - Newark",
        "567" to "567 - Journalism and Media Studies",
        "204" to "204 - Justice Studies",
        "572" to "572 - Kinesiology and Applied Physiology",
        "574" to "574 - Korean",
        "575" to "575 - Labor Studies",
        "578" to "578 - Labor Studies and Employment Relations",
        "550" to "550 - Landscape Architecture",
        "617" to "617 - Languages and Cultures",
        "580" to "580 - Latin",
        "590" to "590 - Latin American Studies",
        "595" to "595 - Latino and Hispanic Caribbean Studies",
        "600" to "600 - Law",
        "601" to "601 - Law",
        "602" to "602 - Law, Professional Skills",
        "607" to "607 - Leadership Skills",
        "606" to "606 - Liberal Studies",
        "610" to "610 - Library and Information Science",
        "615" to "615 - Linguistics",
        "620" to "620 - Management",
        "623" to "623 - Management Science and Information Systems",
        "624" to "624 - Management and Work",
        "628" to "628 - Marine Sciences",
        "630" to "630 - Marketing",
        "635" to "635 - Materials Science and Engineering",
        "645" to "645 - Mathematical Science",
        "640" to "640 - Mathematics",
        "643" to "643 - Mathematics",
        "650" to "650 - Mechanical and Aerospace Engineering",
        "652" to "652 - Medical Ethics and Policy",
        "660" to "660 - Medical Technology",
        "663" to "663 - Medicinal Chemistry",
        "667" to "667 - Medieval Studies",
        "670" to "670 - Meteorology",
        "682" to "682 - Microbial Biology",
        "680" to "680 - Microbiology",
        "681" to "681 - Microbiology and Molecular Genetics",
        "685" to "685 - Middle Eastern and Islamic Studies",
        "690" to "690 - Military Education, Air Force",
        "691" to "691 - Military Education, Army",
        "692" to "692 - Military Education, Navy",
        "694" to "694 - Molecular Biology and Biochemistry",
        "695" to "695 - Molecular Biosciences",
        "698" to "698 - Museum Studies",
        "700" to "700 - Music",
        "702" to "702 - Music",
        "087" to "087 - Music - Newark",
        "701" to "701 - Music, Applied",
        "703" to "703 - Music, Applied",
        "710" to "710 - Neuroscience",
        "705" to "705 - Nursing",
        "709" to "709 - Nutritional Sciences",
        "712" to "712 - Oceanography",
        "716" to "716 - Operations Management",
        "711" to "711 - Operations Research",
        "829" to "829 - Organizational Behavior",
        "713" to "713 - Organizational Leadership",
        "731" to "731 - Packaging Engineering",
        "735" to "735 - Peace and Conflict Studies",
        "723" to "723 - Persian",
        "715" to "715 - Pharmaceutical Chemistry",
        "721" to "721 - Pharmaceutics",
        "718" to "718 - Pharmacology, Cellular and Molecular",
        "720" to "720 - Pharmacy",
        "725" to "725 - Pharmacy Practice and Administration",
        "730" to "730 - Philosophy",
        "745" to "745 - Physician Assistant",
        "750" to "750 - Physics",
        "761" to "761 - Physiology and Integrative Biology",
        "762" to "762 - Planning and Public Policy",
        "765" to "765 - Plant Biology",
        "776" to "776 - Plant Science",
        "775" to "775 - Policy, Health, and Administration",
        "787" to "787 - Polish",
        "790" to "790 - Political Science",
        "810" to "810 - Portuguese",
        "812" to "812 - Portuguese and Lusophone World Studies",
        "792" to "792 - Prevention Science",
        "835" to "835 - Professional Accounting",
        "820" to "820 - Professional Psychology",
        "830" to "830 - Psychology",
        "844" to "844 - Psychology, Applied",
        "834" to "834 - Public Administration",
        "843" to "843 - Public Administration and Management",
        "831" to "831 - Public Administration, Executive",
        "824" to "824 - Public Affairs",
        "832" to "832 - Public Health",
        "816" to "816 - Public Informatics",
        "833" to "833 - Public Policy",
        "848" to "848 - Quantitative Biomedicine",
        "839" to "839 - Quantitative Finance",
        "851" to "851 - Real Estate",
        "840" to "840 - Religion",
        "842" to "842 - Rhetoric",
        "860" to "860 - Russian",
        "902" to "902 - SEBS Internship",
        "826" to "826 - School Psychology",
        "888" to "888 - Sexualities Studies",
        "904" to "904 - Social Justice",
        "910" to "910 - Social Work",
        "920" to "920 - Sociology",
        "940" to "940 - Spanish",
        "955" to "955 - Sport Management",
        "960" to "960 - Statistics",
        "954" to "954 - Statistics - Data Science",
        "958" to "958 - Statistics, Financial and Risk Managemen",
        "959" to "959 - Study Abroad",
        "799" to "799 - Supply Chain and Marketing Science",
        "965" to "965 - Theater",
        "966" to "966 - Theater Arts",
        "963" to "963 - Toxicology",
        "973" to "973 - Turkish",
        "971" to "971 - Urban Planning and Design",
        "970" to "970 - Urban Planning and Policy Development",
        "975" to "975 - Urban Studies and Community Development",
        "977" to "977 - Urban Systems",
        "089" to "089 - Video Production - Newark",
        "988" to "988 - Women's, Gender, and Sexuality Studies",
        "991" to "991 - World Languages",
        "989" to "989 - Writing"
    )
}