...
    val classesUiState by coursesViewModel.classesUiState.collectAsState()

    LazyColumn(
        contentPadding = PaddingValues(dimensionResource(id = R.dimen.padding_medium)),
        horizontalAlignment = Alignment.CenterHorizontally,
        verticalArrangement = Arrangement.spacedBy(dimensionResource(id = R.dimen.padding_medium)),
        modifier = modifier.testTag("lazyColumnTag")
    ) {
        item {
            PromptCard(
                classesUiState = classesUiState,

                onYearResponse = coursesViewModel::updateYear,
...
