...
 */
@Preview(showBackground = true)
@Composable
fun CourseCardPreview() {
    CourseCard(
        course = Course(
            title = "Title",
            courseString = "00:000:000",
            creditsObject = CreditsObject(
                description = "0.0 credits"
            ),
            openSections = 1,
            sections = listOf(
...
